add links to github and linkedin, for now

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-testing
+<html>
+<head>
+</head>
+<body>
+<p>You're probably looking for <a href="https://github.com/cricci">this page</a>, or <a href="https://www.linkedin.com/in/christianmricci/">this page</a>.</p>
+</body>
+</html>
